--- a/Big Number Math/Big Number Math.vcxproj
+++ b/Big Number Math/Big Number Math.vcxproj
@@ -111,6 +111,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="BigNum.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="BigNum.cpp" />
+    <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
